--- a/package.json
+++ b/package.json
@@ -22,9 +22,12 @@
     "styled-components": "^5.2.0"
   },
   "devDependencies": {
+    "@graphql-codegen/cli": "^1.17.10",
+    "@graphql-codegen/typescript": "^1.17.10",
     "@types/node": "^14.11.2",
     "@types/react": "^16.9.49",
     "@types/react-dom": "^16.9.8",
+    "@types/react-helmet": "^6.1.0",
     "@types/styled-components": "^5.1.3",
     "gatsby-plugin-typescript": "^2.4.21",
     "prettier": "2.1.1",
@@ -35,12 +38,15 @@
   ],
   "license": "0BSD",
   "scripts": {
+    "postinstall": "npm run generate",
     "build": "gatsby build",
     "develop": "gatsby develop",
     "format": "prettier --write \"**/*.{js,jsx,ts,tsx,json,md}\"",
     "start": "npm run develop",
     "serve": "gatsby serve",
     "clean": "gatsby clean",
+    "tsc": "tsc",
+    "generate": "graphql-codegen",
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
   },
   "repository": {
